--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.1",
     "@splinetool/react-spline": "^4.0.0",
     "@studio-freight/lenis": "^1.0.42",
+    "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
